--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Deploy to bot host
       run: |
-        ssh -i ~/.ssh/id_ed25519 user@${{ secrets.BOT_HOST }} << 'EOF'
+        ssh -i ~/.ssh/id_ed25519 github-cicd@${{ secrets.BOT_HOST }} << 'EOF'
           cd akagi-bot
           git pull origin main
           sudo systemctl restart akagi-bot.service
