--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,8 @@ jobs:
           git config --global --add safe.directory /home/akagi-bot
           cd akagi-bot
           git pull origin main
+          . env/bin/activate
+          pip install -r requirements.txt
+          deactivate
           sudo systemctl restart akagi-bot.service
         EOF
